@@ -32,7 +32,7 @@
 
 AccelerometerSensorChannel::AccelerometerSensorChannel(const QString& id) :
         AbstractSensorChannel(id),
-        DbusEmitter<AccelerationData>(10),
+        DataEmitter<AccelerationData>(10),
         previousSample_(0,0,0,0)
 {
     SensorManager& sm = SensorManager::instance();
