@@ -29,7 +29,7 @@
 #include "abstractsensor.h"
 #include "abstractchain.h"
 #include "orientationsensor_a.h"
-#include "dbusemitter.h"
+#include "dataemitter.h"
 #include "datatypes/orientationdata.h"
 #include "datatypes/posedata.h"
 #include "datatypes/unsigned.h"
@@ -47,7 +47,7 @@ class FilterBase;
  */
 class OrientationSensorChannel :
         public AbstractSensorChannel,
-        public DbusEmitter<PoseData>
+        public DataEmitter<PoseData>
 {
     Q_OBJECT;
 
