@@ -30,7 +30,7 @@
 
 #include "abstractsensor.h"
 #include "tapsensor_a.h"
-#include "dbusemitter.h"
+#include "dataemitter.h"
 #include "datatypes/tapdata.h"
 #include "deviceadaptor.h"
 
@@ -50,7 +50,7 @@ class FilterBase;
  */
 class TapSensorChannel :
     public AbstractSensorChannel,
-    public DbusEmitter<TapData>
+    public DataEmitter<TapData>
 {
     Q_OBJECT;
 
